syntax="proto3";

option java_package = "com.services";

option go_package = "/pb";
// service RegisterService {
//     rpc Register(RegisterRequest) returns (RegisterResponse) {}
// }

message RegisterRequest {
    string phoneNumber = 1;
    string username=2;
    string email=3;
   string password=4;
   optional string countryCode = 5;
}
message RegisterResponse {
    string message = 1;
    optional string error = 2;
    
}
